--- a/_config.yml
+++ b/_config.yml
@@ -1274,6 +1274,51 @@ issues:
     - Survival
     suppl: 16.7 Mb
     landing: '2021'
+  - slug: RJ-2021-091
+    title: 'cat.dt: An R package for fast construction of accurate Computerized Adaptive
+      Tests using Decision Trees'
+    bibtitle: |-
+      cat.dt: An R package for fast construction of accurate
+                Computerized Adaptive Tests using Decision Trees
+    author:
+    - Javier Rodríguez-Cuadrado
+    - Juan C. Laria
+    - David Delgado-Gómez
+    bibauthor: |-
+      Javier Rodríguez-Cuadrado and Juan C. Laria and David
+                Delgado-Gómez
+    abstract: ' Abstract This article introduces the cat.dt package for the creation
+      of Computerized Adaptive Tests           (CATs). Unlike existing packages, the
+      cat.dt package represents the CAT in a Decision Tree (DT)           structure.
+      This allows building the test before its administration, ensuring that the creation
+      time of the           test is independent of the number of participants. Moreover,
+      to accelerate the construction of the tree,           the package controls its
+      growth by joining nodes with similar estimations or distributions of the ability           level
+      and uses techniques such as message passing and pre-calculations. The constructed
+      tree, as well           as the estimation procedure, can be visualized using
+      the graphical tools included in the package. An           experiment designed
+      to evaluate its performance shows that the cat.dt package drastically reduces           computational
+      time in the creation of CATs without compromising accuracy.  '
+    acknowledged: '2020-06-03'
+    online: '2021-10-19'
+    CRANpkgs:
+    - catR
+    - mirtCAT
+    - catIrt
+    - Matrix
+    - Rglpk
+    - ggplot2
+    CTV_rev:
+    - Psychometrics
+    - Econometrics
+    - Graphics
+    - Multivariate
+    - NumericalMathematics
+    - Optimization
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 591 bytes
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
