--- a/_config.yml
+++ b/_config.yml
@@ -1319,6 +1319,39 @@ issues:
     - TeachingStatistics
     suppl: 591 bytes
     landing: '2021'
+  - slug: RJ-2021-092
+    title: 'SIQR: An R Package for Single-index Quantile Regression'
+    bibtitle: 'SIQR: An R Package for Single-index Quantile Regression'
+    author:
+    - Tianhai Zu
+    - Yan Yu
+    bibauthor: Tianhai Zu and Yan Yu
+    abstract: ' Abstract We develop an R package SIQR that implements the single-index
+      quantile regression (SIQR)           models via an efficient iterative local
+      linear approach in Wu et al. (2010). Single-index quantile           regression
+      models are important tools in semiparametric regression to provide a comprehensive           view
+      of the conditional distributions of a response variable. It is especially useful
+      when the data is           heterogeneous or heavy tailed. The package provides
+      functions that allow users to fit SIQR models,           predict, provide standard
+      errors of the single-index coefficients via bootstrap, and visualize the           estimated
+      univariate function. We apply the R package SIQR to a well-known Boston Housing
+      data.  '
+    acknowledged: '2021-01-15'
+    online: '2021-10-19'
+    CRANpkgs:
+    - quantreg
+    - KernSmooth
+    CTV_rev:
+    - Econometrics
+    - Environmetrics
+    - Multivariate
+    - Optimization
+    - ReproducibleResearch
+    - Robust
+    - SocialSciences
+    - Survival
+    suppl: 1.7 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
