--- a/_config.yml
+++ b/_config.yml
@@ -1352,6 +1352,62 @@ issues:
     - Survival
     suppl: 1.7 Kb
     landing: '2021'
+  - slug: RJ-2021-093
+    title: 'mgee2: An R package for marginal analysis of longitudinal ordinal data
+      with misclassified responses and covariates'
+    bibtitle: |-
+      mgee2: An R package for marginal analysis of longitudinal
+                ordinal data with misclassified responses and
+                covariates
+    author:
+    - Yuliang Xu
+    - Shuo Shuo Liu
+    - Grace Y. Yi
+    bibauthor: Yuliang Xu and Shuo Shuo Liu and Grace Y. Yi
+    abstract: ' Abstract Marginal methods have been widely used for analysing longitudinal
+      ordinal data due to their           simplicity in model assumptions, robustness
+      in inference results, and easiness in the implementation.           However,
+      they are often inapplicable in the presence of measurement error in the variables.
+      Under the           setup of longitudinal studies with ordinal responses and
+      covariates subject to misclassification, Chen           et al. (2014) developed
+      marginal methods for misclassification adjustments using the second-order           estimating
+      equations and proposed a two-stage estimation approach when the validation subsample           is
+      available. Parameter estimation is conducted through the Newton-Raphson algorithm
+      and the           asymptotic distribution of the estimators is established.
+      While the methods of Chen et al. (2014) can           successfully correct the
+      misclassification effects, its implementation is not accessible to general users           due
+      to the lack of a software package. In this paper, we develop an R package, mgee2,
+      to implement           the marginal methods proposed by Chen et al. (2014).
+      To evaluate the performance and illustrate the           features of the package,
+      we conduct numerical studies.  '
+    acknowledged: '2021-01-15'
+    online: '2021-10-19'
+    CRANpkgs:
+    - misclassGLM
+    - kml
+    - kml3d
+    - gee
+    - wgeesel
+    - swgee
+    - MASS
+    - Matrix
+    - ggplot2
+    CTV_rev:
+    - Econometrics
+    - Multivariate
+    - NumericalMathematics
+    - SocialSciences
+    - TeachingStatistics
+    - Cluster
+    - Distributions
+    - Environmetrics
+    - Graphics
+    - MissingData
+    - Phylogenetics
+    - Psychometrics
+    - Robust
+    suppl: 796 bytes
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
