--- a/_config.yml
+++ b/_config.yml
@@ -1408,6 +1408,41 @@ issues:
     - Robust
     suppl: 796 bytes
     landing: '2021'
+  - slug: RJ-2021-094
+    title: 'PASSED: Calculate Power and Sample Size for Two Sample Tests'
+    bibtitle: 'PASSED: Calculate Power and Sample Size for Two Sample Tests'
+    author:
+    - Jinpu Li
+    - Ryan P. Knigge
+    - Kaiyi Chen
+    - Emily V. Leary
+    bibauthor: |-
+      Jinpu Li and Ryan P. Knigge and Kaiyi Chen and Emily V.
+                Leary
+    abstract: ' Abstract Power and sample size estimation are critical aspects in
+      study design to demonstrate           minimized risk for subjects and to justify
+      the allocation of time, money, and other resources.           Researchers often
+      work with response variables which take the form of various distributions. Here,           we
+      present an R package, PASSED, that allows flexibility with seven common distributions
+      and           multiple options to accommodate sample size or power analysis.
+      The relevant statistical theory,           calculations, and examples for each
+      distribution using PASSED are discussed in this paper.  '
+    acknowledged: '2021-02-08'
+    online: '2021-10-19'
+    CRANpkgs:
+    - PASSED
+    - samplesize
+    - TrialSize
+    - simglm
+    - stats
+    - pwr
+    - MESS
+    - pwr2ppl
+    - WebPower
+    - MKmisc
+    CTV_rev: ClinicalTrials
+    suppl: 1.6 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
