--- a/_config.yml
+++ b/_config.yml
@@ -1443,6 +1443,42 @@ issues:
     CTV_rev: ClinicalTrials
     suppl: 1.6 Kb
     landing: '2021'
+  - slug: RJ-2021-095
+    title: openSkies - Integration of Aviation Data into the R Ecosystem
+    bibtitle: |-
+      openSkies - Integration of Aviation Data into the R
+                Ecosystem
+    author:
+    - Rafael Ayala
+    - Daniel Ayala
+    - Lara Sellés Vidal
+    - David Ruiz
+    bibauthor: |-
+      Rafael Ayala and Daniel Ayala and Lara Sellés Vidal and
+                David Ruiz
+    abstract: ' Abstract Aviation data has become increasingly more accessible to
+      the public thanks to the adoption           of technologies such as Automatic
+      Dependent Surveillance-Broadcast (ADS-B) and Mode S, which           provide
+      aircraft information over publicly accessible radio channels. Furthermore, the
+      OpenSky           Network provides multiple public resources to access such
+      air traffic data from a large network of           ADS-B receivers. Here, we
+      present openSkies, the first R package for processing public air traffic data.           The
+      package provides an interface to the OpenSky Network resources, standardized
+      data structures to           represent the different entities involved in air
+      traffic data and functionalities to analyze and visualize           such data.
+      Furthermore, the portability of the implemented data structures makes openSkies
+      easily           reusable by other packages, therefore laying the foundation
+      of aviation data engineering in R.  '
+    acknowledged: '2021-03-08'
+    online: '2021-10-19'
+    CRANpkgs:
+    - openSkies
+    - ggmap
+    CTV_rev:
+    - Spatial
+    - WebTechnologies
+    suppl: 6.7 Mb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
