updated Henriks paper

--- a/_config.yml
+++ b/_config.yml
@@ -69,14 +69,14 @@ issues:
       handling, output and condition relaying, parallel random number generation,
       and           automatic identification of globals lowering the threshold to
       parallelize code. The Future API bridges           parallel frontends with parallel
-      backends following the philosophy that end-users are the ones who           choose
+      backends, following the philosophy that end-users are the ones who           choose
       the parallel backend while the developer focuses on what to parallelize. A variety
-      of backends           exist and third-party contributions meeting the specifications,
+      of backends           exist, and third-party contributions meeting the specifications,
       which ensure that the same code works           on all backends, are automatically
       supported. The future framework solves several problems not           addressed
       by other parallel frameworks in R.  '
     acknowledged: '2020-10-30'
-    online: '2021-06-08'
+    online: '2021-11-10'
     CRANpkgs:
     - sparklyr
     - future
@@ -138,6 +138,7 @@ issues:
     - Survival
     - TeachingStatistics
     - TimeSeries
+    suppl: 1.2 Kb
     landing: '2021'
   - slug: RJ-2021-064
     title: G2F as a Novel Tool to Find and Fill Gaps in Metabolic Networks
