added another article online

--- a/_config.yml
+++ b/_config.yml
@@ -1282,6 +1282,50 @@ issues:
     - WebTechnologies
     suppl: 6.7 Mb
     landing: '2021'
+  - slug: RJ-2021-096
+    title: 'msae: An R Package of Multivariate Fay Herriot Models for Small Area Estimation'
+    bibtitle: |-
+      msae: An R Package of Multivariate Fay Herriot Models for
+                Small Area Estimation
+    author:
+    - Novia Permatasari
+    - Azka Ubaidillah
+    bibauthor: Novia Permatasari and Azka Ubaidillah
+    abstract: ' Abstract The paper introduces an R Package of multivariate Fay-Herriot
+      models for small area           estimation named msae. This package implements
+      four types of Fay-Herriot models, including           univariate Fay-Herriot
+      model (model 0), multivariate Fay-Herriot model (model 1), autoregressive           multivariate
+      Fay-Herriot model (model 2), and heteroskedastic autoregressive multivariate
+      Fay-Herriot           model (model 3). It also contains some datasets generated
+      based on multivariate Fay-Herriot models.           We describe and implement
+      functions through various practical examples. Multivariate Fay-Herriot           models
+      produce a more efficient parameter estimation than direct estimation and univariate
+      model.  '
+    acknowledged: '2020-05-01'
+    online: '2021-11-15'
+    CRANpkgs:
+    - sae
+    - rsae
+    - nlme
+    - hbsae
+    - JoSAE
+    - BayesSAE
+    - mme
+    - saery
+    - msae
+    CTV_rev:
+    - OfficialStatistics
+    - Bayesian
+    - ChemPhys
+    - Econometrics
+    - Environmetrics
+    - Finance
+    - Psychometrics
+    - SocialSciences
+    - Spatial
+    - SpatioTemporal
+    suppl: 2.2 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
