yml for discussion and commentaries done

--- a/_config.yml
+++ b/_config.yml
@@ -956,33 +956,28 @@ issues:
     suppl: 1 Kb
     landing: '2021'
   - slug: RJ-2021-090
-    title: "An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions"
-    bibtitle: |-
-      "An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions"
+    title: 'An R package for Simulating Non-normal Multivariate Distributions: Multivariate
+      Lomax (Pareto type II) and Other Related Distributions'
+    bibtitle: '"An R package for Simulating Non-normal Multivariate Distributions:
+      Multivariate Lomax (Pareto type II) and Other Related Distributions"'
     author:
     - Ravindra Khattree
     - Zhixin Lun
-    bibauthor: |-
-      Ravindra Khattree and Zhixin Lun
-    abstract: ' Convenient and easy-to-use programs are
-      readily available in R to simulate data from and probability
-      calculations for several common multivariate distributions such
-      as normal and t. However, functions for doing so from other
-      less common multivariate distributions, especially those which
-      are asymmetric, are not as readily available, either in R or
-      otherwise. We introduce the R package NonNorMvtDist to generate
-      random numbers from multivariate Lomax distribution, which
-      constitutes a very flexible family of skewed multivariate
-      distributions. Further, by applying certain useful properties
-      of multivariate Lomax distribution, multivariate cases of
-      generalized Lomax, Mardia s Pareto of Type I, Logistic, Burr,
-      Cook-Johnson s uniform, F, and inverted beta can be
-      also considered, and random numbers from these distributions
-      can be generated. Methods for the probability and the
-      equicoordinate quantile calculations for all these distributions
-      are then provided. This work substantially enriches the existing
-      R toolbox for nonnormal or nonsymmetric multivariate probability
-      distributions.  '
+    bibauthor: Ravindra Khattree and Zhixin Lun
+    abstract: ' Convenient and easy-to-use programs are readily available in R to
+      simulate data from and probability calculations for several common multivariate
+      distributions such as normal and t. However, functions for doing so from other
+      less common multivariate distributions, especially those which are asymmetric,
+      are not as readily available, either in R or otherwise. We introduce the R package
+      NonNorMvtDist to generate random numbers from multivariate Lomax distribution,
+      which constitutes a very flexible family of skewed multivariate distributions.
+      Further, by applying certain useful properties of multivariate Lomax distribution,
+      multivariate cases of generalized Lomax, Mardia s Pareto of Type I, Logistic,
+      Burr, Cook-Johnson s uniform, F, and inverted beta can be also considered, and
+      random numbers from these distributions can be generated. Methods for the probability
+      and the equicoordinate quantile calculations for all these distributions are
+      then provided. This work substantially enriches the existing R toolbox for nonnormal
+      or nonsymmetric multivariate probability distributions.  '
     acknowledged: '2021-02-22'
     online: '2021-10-19'
     CRANpkgs:
@@ -1722,27 +1717,26 @@ issues:
     suppl: 41.4 Mb
     landing: '2021'
   - slug: RJ-2021-106
-    title: 'RPESE: Risk and Performance Estimators Standard Errors with
-      Serially Dependent Data'
-    bibtitle: |-
-      RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent Data
+    title: 'RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent
+      Data'
+    bibtitle: 'RPESE: Risk and Performance Estimators Standard Errors with Serially
+      Dependent Data'
     author:
     - Anthony-Alexander Christidis
     - R. Douglas Martin
-    bibauthor: |-
-      Anthony-Alexander Christidi and  R. Douglas Martin
-    abstract: ' Abstract The Risk and Performance Estimators Standard Errors package RPESE
-      implements a new method for computing accurate standard errors of risk and
-      performance estimators when returns are serially dependent. The new method makes
-      use of the representation of a risk or performance estimator as a summation of
-      a time series of influence-function (IF) transformed returns, and computes
+    bibauthor: Anthony-Alexander Christidi and  R. Douglas Martin
+    abstract: ' Abstract The Risk and Performance Estimators Standard Errors package
+      RPESE implements a new method for computing accurate standard errors of risk
+      and performance estimators when returns are serially dependent. The new method
+      makes use of the representation of a risk or performance estimator as a summation
+      of a time series of influence-function (IF) transformed returns, and computes
       estimator standard errors using a sophisticated method of estimating the spectral
-      density at frequency zero of the time series of IF-transformed returns. Two additional
-      packages used by RPESE are introduced, namely RPEIF which computes and provides
-      graphical displays of the IF of risk and performance estimators, and RPEGLMEN
-      which implements a regularized Gamma generalized linear model polynomial fit to
-      the periodogram of the time series of the IF-transformed returns. A Monte Carlo
-      study shows that the new method provides more accurate estimates of standard
+      density at frequency zero of the time series of IF-transformed returns. Two
+      additional packages used by RPESE are introduced, namely RPEIF which computes
+      and provides graphical displays of the IF of risk and performance estimators,
+      and RPEGLMEN which implements a regularized Gamma generalized linear model polynomial
+      fit to the periodogram of the time series of the IF-transformed returns. A Monte
+      Carlo study shows that the new method provides more accurate estimates of standard
       errors for risk and performance estimators compared to well-known alternative
       methods in the presence of serial correlation.'
     acknowledged: '2021-05-24'
@@ -1794,6 +1788,104 @@ issues:
     - WRS2
     CTV_rev: Robust
     suppl: 985 bytes
+    landing: '2021'
+  - slug: RJ-2021-108
+    title: 'Software Engineering and R Programming: A Call for Research'
+    bibtitle: 'Software Engineering and R Programming: A Call for Research'
+    author: Melina Vidoni
+    bibauthor: Melina Vidoni
+    abstract: ' Abstract Although R programming has been a part of research since
+      its origins in the 1990s, few           studies address scientific software
+      development from a Software Engineering (SE) perspective. The           past
+      few years have seen unparalleled growth in the R community, and it is time to
+      push the boundaries           of SE research and R programming forwards. This
+      paper discusses relevant studies that close this           gap Additionally,
+      it proposes a set of good practices derived from those findings aiming to act
+      as a           call-to-arms for both the R and RSE (Research SE) community to
+      explore specific, interdisciplinary           paths of research.  '
+    acknowledged:
+    - '2021-05-24'
+    - '2021-05-31'
+    online: '2021-12-14'
+    landing: '2021'
+  - slug: RJ-2021-109
+    title: 'Comments on "Software Engineering and R Programming: A Call to Action"'
+    bibtitle: |-
+      Comments on "Software Engineering and R Programming: A Call
+                to Action"
+    author: William Michael Landau
+    bibauthor: William Michael Landau
+    abstract: ' Abstract There is a need for rigorous software engineering in R packages,
+      and there is a need for           new research to bridge scientific computing
+      with more traditional computing. Automated tools,           interdisciplinary
+      graduate courses, code reviews, and a welcoming developer community will continue           to
+      democratize best practices. Democratized software engineering will improve the
+      quality, correctness,           and integrity of scientific software, and by
+      extension, the disciplines that rely on it.  '
+    acknowledged: '2021-08-24'
+    online: '2021-12-14'
+    CRANpkgs:
+    - testthat
+    - covr
+    - R6
+    landing: '2021'
+  - slug: RJ-2021-110
+    title: 'Comments on ``Software Engineering and R Programming: A Call for Research'''''
+    bibtitle: |-
+      Comments on ``Software Engineering and R Programming: A Call
+                for Research''
+    author:
+    - Maëlle Salmon
+    - Karthik Ram
+    bibauthor: Maëlle Salmon and Karthik Ram
+    abstract: ' Abstract There is a strong software engineering culture in the R developer
+      community. We recommend           creating, updating and vetting packages as
+      well as keeping up with community standards. We invite           contributions
+      to the rOpenSci project, where participants can gain experience that will shape
+      their           work and that of their peers.  '
+    acknowledged: '2021-10-24'
+    online: '2021-12-14'
+    CRANpkgs:
+    - devtools
+    - roxygen2
+    - testthat
+    - tinytest
+    - dittodb
+    - vcr
+    - httptest
+    - webfakes
+    - httr2
+    - autotest
+    - goodpractice
+    - riskmetric
+    - pkgcheck
+    CTV_rev:
+    - WebTechnologies
+    - Databases
+    landing: '2021'
+  - slug: RJ-2021-111
+    title: 'The R Quest: from Users to Developers'
+    bibtitle: 'The R Quest: from Users to Developers'
+    author: Simon Urbanek
+    bibauthor: Simon Urbanek
+    abstract: ' Abstract R is not a programming language, and this produces the inherent
+      dichotomy between           analytics and software engineering. With the emergence
+      of data science, the opportunity exists to           bridge this gap, especially
+      through teaching practices.  '
+    acknowledged: '2021-11-24'
+    online: '2021-12-14'
+    landing: '2021'
+  - slug: RJ-2021-112
+    title: 'Rejoinder: Software Engineering and R Programming'
+    bibtitle: 'Rejoinder: Software Engineering and R Programming'
+    author: Melina Vidoni
+    bibauthor: Melina Vidoni
+    abstract: '    Abstract It is a pleasure to take part in such fruitful discussion
+      about the relationship between Software              Engineering and R programming,
+      and what could be gain by allowing each to look more closely at the              other.
+      Several discussants make valuable arguments that ought to be further discussed.  '
+    acknowledged: '2021-12-12'
+    online: '2021-12-14'
     landing: '2021'
 - issue: 2009-1
   year: 2009
