update to 2021-101/RJ-2021-106

--- a/_config.yml
+++ b/_config.yml
@@ -1741,47 +1741,35 @@ issues:
     suppl: 41.4 Mb
     landing: '2021'
   - slug: RJ-2021-106
-    title: Advancing Reproducible Research by Publishing R Markdown Notebooks as Interactive
-      Sandboxes Using the learnr Package
+    title: RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent Data
     bibtitle: |-
-      Advancing Reproducible Research by Publishing R Markdown
-                Notebooks as Interactive Sandboxes Using the
-                learnr Package
+      RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent Data
     author:
-    - Chak Hau Michael Tso
-    - Michael Hollaway
-    - Rebecca Killick
-    - Peter Henrys
-    - Don Monteith
-    - '          John Watkins'
-    - Gordon Blair
+    - Anthony-Alexander Christidis
+    - R. Douglas Martin
     bibauthor: |-
-      Chak Hau Michael Tso and Michael Hollaway and Rebecca
-                Killick and Peter Henrys and Don Monteith and John
-                Watkins and Gordon Blair
-    abstract: ' Abstract Various R packages and best practices have played a pivotal
-      role to promote the Findability,           Accessibility, Interoperability,
-      and Reuse (FAIR) principles of open science. For example, (1) well          documented
-      R scripts and notebooks with rich narratives are deposited at a trusted data
-      centre,           (2) R Markdown interactive notebooks can be run on-demand
-      as a web service, and (3) R Shiny           web apps provide nice user interfaces
-      to explore research outputs. However, notebooks require users           to go
-      through the entire analysis, while Shiny apps do not expose the underlying code
-      and require           extra work for UI design. We propose using the ‘learnr’
-      package to expose certain code chunks in R           Markdown so that users
-      can readily experiment with them in guided, editable, isolated, executable,           and
-      resettable code sandboxes. Our approach does not replace the existing use of
-      notebooks and           Shiny apps, but it adds another level of abstraction
-      between them to promote reproducible science.  '
+      Anthony-Alexander Christidi and  R. Douglas Martin
+    abstract: 'The Risk and Performance Estimators Standard Errors package RPESE implements
+a new method for computing accurate standard errors of risk and performance estimators when returns are serially dependent. The
+new method makes use of the representation of a risk or performance estimator as a
+summation of a time series of influence-function (IF) transformed returns, and computes
+estimator standard errors using a sophisticated method of estimating the spectral density at frequency zero of the time series of IF-transformed returns. Two additional packages used by RPESE are introduced, namely RPEIF which computes and provides graphical displays of the IF of risk and performance estimators, and RPEGLMEN which implements a regularized Gamma generalized linear model polynomial fit to the periodogram of the time series of the IF-transformed returns. A Monte Carlo study shows that the new method provides more accurate estimates of standard errors for risk and performance estimators compared to well-known alternative methods in the presence of serial correlation.'
     acknowledged: '2021-05-24'
     online: '2021-12-15'
     CRANpkgs:
-    - learnr
-    - RAppArmor
-    - shinymeta
-    - knitr
-    CTV_rev: ReproducibleResearch
-    suppl: 1.7 Mb
+    - RPESE
+    - RPEIF
+    - RPEGLMEN
+    - PerformanceAnalytics
+    - RobStatTM
+    - nse
+    - sandwich
+    CTV_rev:
+    - Econometrics
+    - Finance
+    - Robust
+    - SocialSciences
+    suppl: 2.2 Kb
     landing: '2021'
   - slug: RJ-2021-107
     title: 'RobustBF: An R Package for Robust Solution to the Behrens-Fisher Problem'
