--- a/_config.yml
+++ b/_config.yml
@@ -1749,11 +1749,20 @@ issues:
     - R. Douglas Martin
     bibauthor: |-
       Anthony-Alexander Christidi and  R. Douglas Martin
-    abstract: 'The Risk and Performance Estimators Standard Errors package RPESE implements
-a new method for computing accurate standard errors of risk and performance estimators when returns are serially dependent. The
-new method makes use of the representation of a risk or performance estimator as a
-summation of a time series of influence-function (IF) transformed returns, and computes
-estimator standard errors using a sophisticated method of estimating the spectral density at frequency zero of the time series of IF-transformed returns. Two additional packages used by RPESE are introduced, namely RPEIF which computes and provides graphical displays of the IF of risk and performance estimators, and RPEGLMEN which implements a regularized Gamma generalized linear model polynomial fit to the periodogram of the time series of the IF-transformed returns. A Monte Carlo study shows that the new method provides more accurate estimates of standard errors for risk and performance estimators compared to well-known alternative methods in the presence of serial correlation.'
+    abstract: ' Abstract The Risk and Performance Estimators Standard Errors package RPESE 
+      implements a new method for computing accurate standard errors of risk and 
+      performance estimators when returns are serially dependent. The new method makes 
+      use of the representation of a risk or performance estimator as a summation of 
+      a time series of influence-function (IF) transformed returns, and computes 
+      estimator standard errors using a sophisticated method of estimating the spectral 
+      density at frequency zero of the time series of IF-transformed returns. Two additional 
+      packages used by RPESE are introduced, namely RPEIF which computes and provides 
+      graphical displays of the IF of risk and performance estimators, and RPEGLMEN 
+      which implements a regularized Gamma generalized linear model polynomial fit to 
+      the periodogram of the time series of the IF-transformed returns. A Monte Carlo 
+      study shows that the new method provides more accurate estimates of standard 
+      errors for risk and performance estimators compared to well-known alternative 
+      methods in the presence of serial correlation.'
     acknowledged: '2021-05-24'
     online: '2021-12-15'
     CRANpkgs:
