trying to get yml fixed

--- a/_config.yml
+++ b/_config.yml
@@ -1741,8 +1741,8 @@ issues:
     suppl: 41.4 Mb
     landing: '2021'
   - slug: RJ-2021-106
-    title: RPESE Risk and Performance Estimators Standard Errors with
-      Serially Dependent Data
+    title: 'RPESE: Risk and Performance Estimators Standard Errors with
+      Serially Dependent Data'
     bibtitle: |-
       RPESE: Risk and Performance Estimators Standard Errors with Serially Dependent Data
     author:
