--- a/_config.yml
+++ b/_config.yml
@@ -956,9 +956,9 @@ issues:
     suppl: 1 Kb
     landing: '2021'
   - slug: RJ-2021-090
-    title: An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions
+    title: "An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions"
     bibtitle: |-
-      An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions
+      "An R package for Simulating Non-normal Multivariate Distributions: Multivariate Lomax (Pareto type II) and Other Related Distributions"
     author:
     - Ravindra Khattree
     - Zhixin Lun
