removing math in abstract

--- a/_config.yml
+++ b/_config.yml
@@ -967,7 +967,7 @@ issues:
     abstract: ' Convenient and easy-to-use programs are
       readily available in R to simulate data from and probability
       calculations for several common multivariate distributions such
-      as normal and $t$. However, functions for doing so from other
+      as normal and t. However, functions for doing so from other
       less common multivariate distributions, especially those which
       are asymmetric, are not as readily available, either in R or
       otherwise. We introduce the R package NonNorMvtDist to generate
@@ -976,7 +976,7 @@ issues:
       distributions. Further, by applying certain useful properties
       of multivariate Lomax distribution, multivariate cases of
       generalized Lomax, Mardia s Pareto of Type I, Logistic, Burr,
-      Cook-Johnson s uniform, $F$, and inverted beta can be
+      Cook-Johnson s uniform, F, and inverted beta can be
       also considered, and random numbers from these distributions
       can be generated. Methods for the probability and the
       equicoordinate quantile calculations for all these distributions
