shortened NPBayesImputeCat title

--- a/_config.yml
+++ b/_config.yml
@@ -629,10 +629,10 @@ issues:
     - WebTechnologies
     landing: '2021'
   - slug: RJ-2021-080
-    title: Multiple Imputation and Synthetic Data Generation with the R Package NPBayesImputeCat
+    title: Multiple Imputation and Synthetic Data Generation with NPBayesImputeCat
     bibtitle: |-
-      Multiple Imputation and Synthetic Data Generation with the R
-                Package NPBayesImputeCat
+      Multiple Imputation and Synthetic Data Generation with 
+               NPBayesImputeCat
     author:
     - Jingchen Hu
     - Olanrewaju Akande
